# smartgridsim

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: INDEX.md  architecture.md  claude_live_run_seed42.md  cli.md  components.md  controllers.md  experiments.md  methodology.md  research-question.md
docs/dev/: extending.md
scripts/: aggregate_pilot.py  compare_strategies.py  plot_run.py
src/sgsim/: __init__.py  cli.py  components.py  data_loaders.py  economics.py  engine.py  experiment.py  forecast.py  frequency.py  weather.py
src/sgsim/ai/: __init__.py  action.py  controllers.py  master_prompt.md  state.py
src/sgsim/components/: __init__.py  base.py  dispatchable.py  loads.py  renewables.py  sector_coupling.py  storage.py
src/sgsim/controllers/: __init__.py  base.py  naive.py  rule_based.py
src/sgsim/scenarios/: example.yaml  stadt_mittel.yaml
tests/: test_ai_pipeline.py  test_cli_smoke.py  test_components.py  test_controllers.py  test_energy_balance.py  test_frequency_and_forecast.py  test_phase5.py
