[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sgsim"
version = "0.1.0"
description = "Smart-Grid-Simulator als physikalisches Experiment fuer eine Seminararbeit"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
sgsim = "sgsim.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sgsim = ["scenarios/*.yaml", "ai/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
